course 10 - additions to the code